--- a/profil.html
+++ b/profil.html
@@ -60,7 +60,7 @@
             <div class="col-2">
                 <div class="about">
                     <h2>Tujuan Kami</h2>
-                    <p>eShop merupakan sebuah perusahaan yang bergerak dalam bidang pemasaran. eShop menyediakan barang-barang 
+                    <p>eShop merupakan sebuah perusahaan yang bergerak dalam bidang penjualan. eShop menyediakan barang-barang 
                         elektronik original dengan harga yang terjangkau dan terpercaya, yang pastinya 
                         sesuai dengan kebutuhan customer. Tujuan perusahaan ini didirikan yaitu untuk membantu customer dalam membeli 
                         barang dengan cara yang mudah.
